Adds more blog post styles.

--- a/styles/highlight.css
+++ b/styles/highlight.css
@@ -1,3 +1,4 @@
+/* Based on hosted file from https://highlightjs.org/download/ */
 /* Colors from Tomorrow Night Bright Theme */
 /* Original theme - https://github.com/chriskempson/tomorrow-theme */
 
