--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -2,8 +2,14 @@
 @tailwind components; 
 @tailwind utilities; 
 
+/* Global site styles */
+body { 
+  @apply bg-orange-100; 
+  -webkit-font-smoothing: antialiased;
+}
+
 /* Global blog post styles */ 
-article h1 { @apply font-bold text-5xl mb-8 text-purple-900; }
+article h1 { @apply font-bold text-5xl mb-8; }
 article h2 { @apply font-bold text-4xl mb-2; }
 article h3 { @apply font-bold text-3xl mb-2; }
 article h4 { @apply font-bold text-2xl mb-2; }
@@ -11,6 +17,13 @@ article h5 { @apply font-bold text-xl mb-2; }
 article h6 { @apply font-semibold; }
 article p { @apply text-xl mb-8; }
 article pre { @apply mb-8 p-2; }
-article ul { @apply mb-8;}
-article ol { @apply mb-8;}
-body { @apply bg-orange-100; }
+article ul { @apply mb-8 list-disc text-xl;}
+article ol { @apply mb-8 list-decimal text-xl;}
+article ul li p { @apply mb-0;}
+article blockquote { @apply pl-4 pt-4 pb-1 bg-orange-200 text-orange-900; }
+article code { @apply text-orange-900; }
+article a { @apply underline text-purple-700; }
+article a:visited { @apply text-purple-900; }
+article a:hover { @apply cursor-pointer; }
+article img { @apply ml-auto mr-auto mb-8 shadow-lg; }
+
