--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -15,12 +15,12 @@ article h3 { @apply font-bold text-3xl mb-2; }
 article h4 { @apply font-bold text-2xl mb-2; }
 article h5 { @apply font-bold text-xl mb-2; }
 article h6 { @apply font-semibold; }
-article p { @apply text-xl mb-8; }
+article p { @apply text-xl mb-8 font-serif; }
 article pre { @apply mb-8 p-2; }
-article ul { @apply mb-8 list-disc text-xl;}
-article ol { @apply mb-8 list-decimal text-xl;}
+article ul { @apply mb-8 list-disc text-xl font-serif;}
+article ol { @apply mb-8 list-decimal text-xl font-serif;}
 article ul li p { @apply mb-0;}
-article blockquote { @apply pl-4 pt-4 pb-1 bg-orange-200 text-orange-900; }
+article blockquote { @apply pl-4 pt-4 pb-1 bg-orange-200 text-orange-900 font-serif; }
 article code { @apply text-orange-900; }
 article a { @apply underline text-purple-700; }
 article a:visited { @apply text-purple-900; }
