--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -18,8 +18,8 @@ body {
 .markdown h6 { @apply font-semibold; }
 .markdown p { @apply text-xl mb-8 font-thin text-gray-800; }
 .markdown pre { @apply mb-8 p-2; }
-.markdown ul { @apply mb-8 list-disc text-xl font-serif;}
-.markdown ol { @apply mb-8 list-decimal text-xl font-serif;}
+.markdown ul { @apply mb-8 list-disc text-xl font-thin }
+.markdown ol { @apply mb-8 list-decimal text-xl font-thin }
 .markdown ul li p { @apply mb-0;}
 .markdown blockquote { @apply pl-4 pt-4 pb-1 mb-8 bg-orange-200 text-orange-900 font-serif; }
 .markdown a { @apply underline text-purple-700; }
